# nannou-webgpu

./: .gitignore  Cargo.toml  README.md
lifegame/: main.rs
lifegame/shaders/: compute.wgsl
