[package]
name = "nannou-webgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#wgpu = { git = "https://github.com/gfx-rs/wgpu", branch = "master" }
nannou = "0.18.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
async-std = "1.10.0"
pollster = "0.2"

[[example]]
name = "lifegame"
path = "lifegame/main.rs"
